# mrclean-py

./: .gitignore  README.md  activate.sh  build_and_install.sh  clean.sh  environment.yml  manifest.txt  pyproject.toml  setup.py  usefull.txt
mrclean_py/: main.py
src/mrclean-py/: main.py
